Fixing some grammar and layout issues

--- a/plom-core/src/main/webapp/ide.css
+++ b/plom-core/src/main/webapp/ide.css
@@ -362,6 +362,7 @@ a.runbutton {
 .plomNavigationHeader .subject .breadcrumb {
 	flex-grow: 1;
 	align-self: center;
+	overflow: clip;
 }
 
 .plomNavigationHeader .subject .breadcrumb .breadcrumb-item {
